--- a/blog/public/app.css
+++ b/blog/public/app.css
@@ -1,18 +1,17 @@
 body {
-    background: grey;
-    color: white;
-    width: 600px;
+    background: white;
+    color: #222222;
+    max-width: 600px;
     margin: auto;
     font-family: sans-serif;
 }
 
 p {
-    line-height: 1.8;
+    line-height: 1.6;
 }
 
-article + article
-{
+article + article {
     margin-top: 3rem;
     padding-top: 3rem;
-    border-top: 1px solid #c2c2c2;
+    border-top: 1px solid #c5c5c5;
 }
